out.txt
Parser/RequestHandler/ProcessRequestHandler.cpp:303:45: error: no viable conversion from 'std::__1::map<short, stErrorPagedata, std::__1::less<short>, std::__1::allocator<std::__1::pair<const short, stErrorPagedata> > >::const_iterator' (aka '__map_const_iterator<__tree_const_iterator<std::__1::__value_type<short, stErrorPagedata>, std::__1::__tree_node<std::__1::__value_type<short, stErrorPagedata>, void *> *, long> >') to 'std::map<short, stErrorPagedata>::iterator' (aka '__map_iterator<__tree_iterator<std::__1::__value_type<short, stErrorPagedata>, std::__1::__tree_node<std::__1::__value_type<short, stErrorPagedata>, void *> *, long> >')
        std::map<short, stErrorPagedata>::iterator it = ErrorPagedata.find(originalCode);
                                                   ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/map:776:28: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'std::__1::map<short, stErrorPagedata, std::__1::less<short>, std::__1::allocator<std::__1::pair<const short, stErrorPagedata> > >::const_iterator' (aka '__map_const_iterator<__tree_const_iterator<std::__1::__value_type<short, stErrorPagedata>, std::__1::__tree_node<std::__1::__value_type<short, stErrorPagedata>, void *> *, long> >') to 'const std::__1::__map_iterator<std::__1::__tree_iterator<std::__1::__value_type<short, stErrorPagedata>, std::__1::__tree_node<std::__1::__value_type<short, stErrorPagedata>, void *> *, long> > &' for 1st argument
class _LIBCPP_TEMPLATE_VIS __map_iterator
                           ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/map:794:5: note: candidate constructor not viable: no known conversion from 'std::__1::map<short, stErrorPagedata, std::__1::less<short>, std::__1::allocator<std::__1::pair<const short, stErrorPagedata> > >::const_iterator' (aka '__map_const_iterator<__tree_const_iterator<std::__1::__value_type<short, stErrorPagedata>, std::__1::__tree_node<std::__1::__value_type<short, stErrorPagedata>, void *> *, long> >') to 'std::__1::__tree_iterator<std::__1::__value_type<short, stErrorPagedata>, std::__1::__tree_node<std::__1::__value_type<short, stErrorPagedata>, void *> *, long>' for 1st argument
    __map_iterator(_TreeIterator __i) _NOEXCEPT : __i_(__i) {}
    ^
1 error generated.
make: *** [Parser/RequestHandler/ProcessRequestHandler.o] Error 1
